<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quizzes: Personality</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_next">Next</string>
    <string name="menu_settings">Settings</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="close">Close</string>
    <string name="your_score_is">Your score is</string>
    <string name="the_roommate_test">The Roommate Test</string>
    <string name="the_good_employee_test">The Good Employee Test</string>
    <string name="the_neighbor_test">The Neighbor Test</string>
    <string name="the_etiquette_test">The Etiquette Test</string>
    <string name="the_friendship_test">The Friendship Test</string>
    <string name="large_text">Large Text</string>
    <string name="radiobutton">RadioButton</string>
    <string name="medium_text">Medium text</string>
    <string name="small_text">Small Text</string>
    <string name="history">History</string>
    <string name="start">Start</string>
    <string name="list">List</string>
    <string name="saved_results">Saved Results</string>
    
</resources>
