<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:background="@drawable/bkgsq"
	android:theme="@style/AppTheme"
	tools:context=".SelectTestActivity" >
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/TextView01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/the_roommate_test"
			android:textAppearance="?android:attr/textAppearanceMedium" />
	
		<Button
			android:id="@+id/button1"
			android:background="@drawable/regbutton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/start_quiz"
			android:textColor="#FFFFFF"
			android:textStyle="bold|italic" />
	
		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="60dp"
			android:text="@string/the_good_employee_test"
			android:textAppearance="?android:attr/textAppearanceMedium" />
	
		<Button
			android:id="@+id/button2"
			android:background="@drawable/regbutton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/start_quiz"
			android:textColor="#FFFFFF"
			android:textStyle="bold|italic" />
	
		<TextView
			android:id="@+id/textView3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="60dp"
			android:text="@string/the_neighbor_test"
			android:textAppearance="?android:attr/textAppearanceMedium" />
	
		<Button
			android:id="@+id/button3"
			android:background="@drawable/regbutton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/start_quiz"
			android:textColor="#FFFFFF"
			android:textStyle="bold|italic" />
	
		<TextView
			android:id="@+id/textView4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="60dp"
			android:text="@string/the_etiquette_test"
			android:textAppearance="?android:attr/textAppearanceMedium" />
	
		<Button
			android:id="@+id/button4"
			android:background="@drawable/regbutton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/start_quiz"
			android:textColor="#FFFFFF"
			android:textStyle="bold|italic" />
	
		<TextView
			android:id="@+id/textView5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="60dp"
			android:text="@string/the_friendship_test"
			android:textAppearance="?android:attr/textAppearanceMedium" />
	
		<Button
			android:id="@+id/button5"
			android:background="@drawable/regbutton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/start_quiz"
			android:textColor="#FFFFFF"
			android:textStyle="bold|italic" />
	</LinearLayout>
</ScrollView>